--- a/index.html
+++ b/index.html
@@ -27,15 +27,21 @@
 
     <main>
         <section id="destaques">Destaques</section>
-        <section id="imoveis">Imoveis</section>
+
+        <section id="imoveis">
+            <!-- Imóveis listados pelo JS -->
+        </section>
+
         <section id="avaliacoes">Avaliações</section>
         <section id="contato">Contato</section>
         <section id="sobre">Sobre</section>
     </main>
-    
-    <footer>footer</footer>
+
+    <footer>FOOTER</footer>
 </body>
 
 <!-- JS -->
-<script src="./js/app.js"></script>
+<script src="./js/app.js">
+</script>
+
 </html>
